--- a/index.html
+++ b/index.html
@@ -8,7 +8,19 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
-    <title>BUYO v2</title>
+    <!-- set ogp -->
+    <meta property="og:title" content="BUYO" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://i.imgur.com/WYpbqYW.png" />
+    <meta property="og:image" content="https://i.imgur.com/WYpbqYW.png" />
+    <meta property="og:site_name" content="BUYO" />
+    <meta property="og:description" content="くされエン部室予約アプリ" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="BUYO" />
+    <meta name="twitter:description" content="くされエン部室予約アプリ" />
+    <meta name="twitter:image" content="https://i.imgur.com/WYpbqYW.png" />
+    <meta name="description" content="くされエン部室予約アプリ" />
+    <title>BUYO</title>
   </head>
 
   <body>
